# nd0013_cd2693_Exercise_Starter_Code

Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Creating-ICP/: Makefile  icp  icp2-main.cpp
Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Creating-NDT/: CMakeLists.txt  Makefile  ndt  ndt_sol
Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Intro-to-ICP/: CMakeLists.txt  Makefile  icp  icp_sol
Lesson_6_Utilizing_Scan_Matching/Exercise-ICP-Alignment/: CMakeLists.txt  Makefile  scan_matching_1  scan_matching_1_sol  sm1-main.cpp
Lesson_6_Utilizing_Scan_Matching/Exercise-Mapping/: .gitignore  CMakeLists.txt  Makefile  map-main-solution.cpp  map-main.cpp  my_map.pcd
Lesson_6_Utilizing_Scan_Matching/Exercise-NDT-Alignment/: CMakeLists.txt  Makefile  scan_matching_2  scan_matching_2_sol  sm2-main.cpp
Lesson_7_Project_Scan_Matching_Localization/c3-project/: .gitignore  Makefile  c3-main.cpp
